# internship-assesment

./: README.md  render.yaml
backend/: Dockerfile  agent.py  main.py  prompt.py  pyproject.toml  requirements.txt  schema.py
frontend/: Dockerfile  app.py  pyproject.toml
